--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,6 @@
     }
 
     .section {
-        padding: 20px;
         text-align: center;
         font-size: 20px;
     }
@@ -51,8 +50,8 @@
             <p>Tedarik Şirketi Firmasıyız</p>
         </div>
     </header>
-    <div style="padding-inline: 30px;">
-        <section style="padding-inline: 100px;">
+    <div>
+        <section style="padding-inline: 150px;">
             <div class="border">
                 <div class="row">
                     <div style="padding-left: 30px;">
@@ -83,23 +82,34 @@
         <section class="section">
             <div>
                 <br>
-                <h2 style="font-weight: bold;">Misyonumuz</h2>
-                <p>Satın alma ve lojistik süreçlerini makul şekilde yönetip geliştirerek<br>
-                    müşterilerimizin ticari sürecini kolaylaştırmak, düşük maliyetle müşteri memnuniyeti
-                    sağlamak<br>ve kendi enerjilerini sahip oldukları faaliyete yönlendirmek.</p>
+                <div style="background-color: #fafafa;">
+                    <br>
+                    <h2 style="font-weight: bold;">Misyonumuz</h2>
+                    <p>Satın alma ve lojistik süreçlerini makul şekilde yönetip
+                        geliştirerek<br>
+                        müşterilerimizin ticari sürecini kolaylaştırmak, düşük maliyetle müşteri memnuniyeti
+                        sağlamak<br>ve kendi enerjilerini sahip oldukları faaliyete yönlendirmek.</p>
+                    <br>
+                </div>
+
 
                 <br>
                 <h2 style="font-weight: bold;">Vizyonumuz</h2>
                 <p>Batı Karadeniz bölgesinde güvenilir ve genç yapısıyla<br>sektöründe yenilikleri takip eden ve
                     bunları müşterileriyle buluşturan,<br>en çok tercih edilen iş ortağı olmak.</p>
-
                 <br>
-                <h2 style="font-weight: bold;">Değerlerimiz</h2>
-                <p>Önce müşteri” yaklaşımıyla maksimum saygı, dürüstlük ve
-                    güvenilirlikle<br>alanda süreci yönetmek sözümüzü daima koruyacağız.</p>
-
+                <div style="background-color: #fafafa;">
+                    <br>
+                    <h2 style="font-weight: bold;">Değerlerimiz</h2>
+                    <p>Önce müşteri” yaklaşımıyla maksimum saygı, dürüstlük ve
+                        güvenilirlikle<br>alanda süreci yönetmek sözümüzü daima koruyacağız.</p>
+                    <br>
+                </div>
             </div>
         </section>
+
+        <br>
+        <br>
 
         <section class="section">
             <div class="container" style="padding-inline: 50px;">
@@ -139,7 +149,10 @@
         </section>
 
         <br>
-        <section class="section">
+        <br>
+
+        <section class="section" style="background-color: #fafafa;">
+            <br>
             <div class="container">
                 <h2 class="title-right-line" style="font-weight: bold;">Efe Tedarik</h2>
                 <div class="title">Batı Karadeniz'in <t style="text-decoration-line: underline;">süratle</t>
@@ -167,6 +180,8 @@
                     </div>
                 </div>
             </div>
+            <br>
+
         </section>
 
         <br>
