--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,4 +2,85 @@
 
 {% block content %}
 
+{% load staticfiles %}
+
+<style>
+    .section {
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .h1 {
+        font-weight: bold;
+        font-size: 40px;
+    }
+
+    .h2 {
+        font-weight: bold;
+        color: #005494;
+        font-size: 30px;
+    }
+</style>
+
+<body>
+    <div>
+        <section>
+            <div class="container">
+                <br>
+                <img src="{% static 'img/background/contact_bg.png' %}" style="max-width: 99%;">
+                <br>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Adres:</h2>
+                        <p>Sadık Tekin Müftüoğlu Cd. No:22/A<br> Çaycuma, ZONGULDAK /
+                            TÜRKİYE</p>
+                        <br>
+                        <h2>Merkez Ofis:</h2>
+                        <p>Bağlıca Mahallesi, Bulvarı Bulvarı 26/F<br> Etimesgut, ANKARA /
+                            TÜRKİYE</p>
+                        <p>efetedarik@outlook.com<br> Tel: +90 312 502 4949<br>
+                            Tel: +90 312 387 3000</p>
+                        <br>
+                        <h2>Sosyal Medya Adreslerimiz</h2>
+                        <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"
+                                style="height: 40px;">
+                            <a href="https://www.instagram.com/efe.tedarik/"
+                                style="text-decoration-line: underline; font-size: 20px; color: #005494 ">efe.tedarik</a>
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="spotbox">
+                            <h2>
+                                Müşteri Hizmetleri
+                            </h2>
+                            <div class="telnumber">+90 506 543 2808</div>
+                            <br>
+                        </div>
+                        <div class="map">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1496.008847904458!2d32.07879381524602!3d41.41713453322023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x409c83139c8b44cf%3A0x3b78e9e48f58acc0!2zWWVuaSwgU2FkxLFrIFRla2luIE3DvGZ0w7xvxJ9sdSBObzoyMiwgNjc5MDAgw4dheWN1bWEvWm9uZ3VsZGFr!5e0!3m2!1str!2str!4v1599772679058!5m2!1str!2str"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+                        <br>
+                        <div class="col-md-6">
+                            <h2 class="h2">Bize Yazın</h2>
+                            <p> Her türlü sorularınız veya ihtiyacınız olan diğer her şey için bize Whatsapp üzerinden
+                                mesaj
+                                gönderebilir yada direkt arıyabilirsiniz! </p>
+                            <br> <br>
+                        </div>
+                    </div>
+                    <hr>
+
+                </div>
+            </div>
+        </section>
+
+    </div>
+
+</body>
+
 {% endblock content %}
