--- a/templates/about.html
+++ b/templates/about.html
@@ -8,10 +8,13 @@
     .header {
         padding: 60px;
         text-align: center;
-        background: #e65100;
+        background-image: url("{% static 'img/background/orange-wall.jpg' %}");
+        background-size: cover;
+        background-position: center;
         color: white;
         font-size: 30px;
-
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: white;
     }
 
     .h1 {
@@ -82,7 +85,7 @@
         <section class="section">
             <div>
                 <br>
-                <div style="background-color: #fafafa;">
+                <div style="background-color: #f1f1f1a4;">
                     <br>
                     <h2 style="font-weight: bold;">Misyonumuz</h2>
                     <p>Satın alma ve lojistik süreçlerini makul şekilde yönetip
@@ -98,7 +101,7 @@
                 <p>Batı Karadeniz bölgesinde güvenilir ve genç yapısıyla<br>sektöründe yenilikleri takip eden ve
                     bunları müşterileriyle buluşturan,<br>en çok tercih edilen iş ortağı olmak.</p>
                 <br>
-                <div style="background-color: #fafafa;">
+                <div style="background-color: #f1f1f1a4;">
                     <br>
                     <h2 style="font-weight: bold;">Değerlerimiz</h2>
                     <p>Önce müşteri” yaklaşımıyla maksimum saygı, dürüstlük ve
@@ -151,7 +154,7 @@
         <br>
         <br>
 
-        <section class="section" style="background-color: #fafafa;">
+        <section class="section" style="background-color: #f1f1f1a4;">
             <br>
             <div class="container">
                 <h2 class="title-right-line" style="font-weight: bold;">Efe Tedarik</h2>
