--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,6 @@
 {% include "navbar.html" %}
 
 <body>
-
   {% block content %}
   {% endblock content %}
 
@@ -61,3 +60,34 @@
 </body>
 
 </html>
+
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-afe4d8cc-e711-49a9-bc84-7235af022512"></div>
+
+<br>
+<br>
+<div style="background: rgba(128, 128, 128, 0.075); padding: 30px;">
+  <div class="row">
+    <div class="col-md-3">
+      <img src="{% static 'img/EfeLogo.png' %}" style="height: 100px;">
+      <br>
+    </div>
+    <div class="col-md-3">
+      <b>ZONGULDAK</b><br>Sadık Tekin Müftüoğlu Cd. No:22/A<br>Çaycuma, ZONGULDAK / TÜRKİYE
+      <br>+90 312 502 4949
+      <br><br>
+    </div>
+    <div class="col-md-3">
+      <b>ANKARA</b><br>Bağlıca Mahallesi, Bulvarı Bulvarı 26/F<br>Etimesgut, ANKARA / TÜRKİYE
+      <br>+90 312 387 3000<br><br>
+
+      <br> <br>
+    </div>
+    <div class="col-md-3">
+      <a href="mailto:efetedarik@outlook.com" target="_blank"> efetedarik@outlook.com</a>
+      <br>
+      <br>
+      <p class="copyright"> ©Tüm Hakları Saklıdır. </p>
+    </div>
+  </div>
+</div>
