--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,8 +41,9 @@
                         <h2>Merkez Ofis:</h2>
                         <p>Bağlıca Mahallesi, Bulvarı Bulvarı 26/F<br> Etimesgut, ANKARA /
                             TÜRKİYE</p>
-                        <p>efetedarik@outlook.com<br> Tel: +90 312 502 4949<br>
-                            Tel: +90 312 387 3000</p>
+                        <a href="mailto:efetedarik@outlook.com" target="_blank"> efetedarik@outlook.com</a><br> Tel: +90
+                        312 502 4949<br>
+                        Tel: +90 312 387 3000</p>
                         <br>
                         <h2>Sosyal Medya Adreslerimiz</h2>
                         <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/768px-Instagram_logo_2016.svg.png"
