--- a/templates/products.html
+++ b/templates/products.html
@@ -8,7 +8,8 @@
     .header {
         padding: 60px;
         text-align: center;
-        background: orange;
+        background-image: url("{% static 'img/background/market2.jpg' %}");
+        background-size: cover;
         color: white;
         font-size: 30px;
     }
@@ -21,6 +22,8 @@
     .h1 {
         font-weight: bold;
         font-size: 40px;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: white;
     }
 
     .h2 {
@@ -64,8 +67,10 @@
         <div class="header">
             <div class="texts">
                 <h1 class="h1">EFE TEDARİK ÜRÜNLERİ</h1>
-                <h2 style="font-weight: bold; font-size: 25px;">Sizi mutlu eden ürünleri biz getiriyoruz</h2>
-                <div style="font-size: 25px;">Pazarın ve müşterilerimizin ihtiyaç ve beklentilerine göre<br>farklı
+                <h2 style="font-weight: bold; font-size: 25px; -webkit-text-stroke-width: 1px;
+                -webkit-text-stroke-color: white;">Sizi mutlu eden ürünleri biz getiriyoruz</h2>
+                <div style="font-size: 25px; -webkit-text-stroke-width: 0.5px;
+                -webkit-text-stroke-color: white;">Pazarın ve müşterilerimizin ihtiyaç ve beklentilerine göre<br>farklı
                     kategorilerde ithalatı ve iç piyasa alımları yapılan harika ürünleri keşfedin</div>
             </div>
         </div>
