--- a/templates/temp.html
+++ b/templates/temp.html
@@ -6,3 +6,5 @@
     <li>Finans kontrolü ve dengesi ile olası riskleri azaltır</li>
     <li>Beklenmeyen riskleri kaldırır ve müşteri memnuniyetine<br>odaklanma imkanı sağlar</li>
 </ul>
+
+"{% static '' %}"
